# ChangeLog for app-arch/par
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/par/ChangeLog,v 1.10 2003/09/26 21:07:35 aliz Exp $

*par-2.0.3 (25 Sep 2003)

  24 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> :
  version bump for par2 support, bug #25087

  07 Jun 2003; <msterret@gentoo.org> par-1.1.ebuild:
  DEPEND on sed >= 4

*par-1.1 (19 May 2003)

  19 May 2003; Martin Holzer <mholzer@gentoo.org> par-1.1.ebuild:
  Fixing sed typo. Closes #20777

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*parchive-1.1 (24 Apr 2002)

  14 Aug 2002; Pieter Van den Abeele <pvdabeel@gentoo.org> :
  Added ppc keyword
 
  24 Apr 2002; Spider <spider@gentoo.org> ChangeLog parchive-1.1.ebuild:
  initial release