@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/par
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/par/ChangeLog,v 1.10 2003/09/26 21:07:35 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/par/ChangeLog,v 1.11 2003/11/15 02:11:15 robbat2 Exp $
+
+  14 Nov 2003; Robin H. Johnson <robbat2@gentoo.org> par-2.0.3.ebuild:
+  move par-2.0.3 to par2cmdline-0.3 as per bug #29874
 
 *par-2.0.3 (25 Sep 2003)
 
